# padding-aint-enough

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  CITATION.cff  Cargo.toml  Cross.toml  Pipfile  README.md  alexa-top10000-rr00.txt  alexa-top10000-rr01.txt  analyze_missclassifications.md  build.rs  build.rs.disable  captureing-pipeline.md  capturing-pipeline.md  confusion_domains.csv  crossbuild.fish  keras-model.h5  keras-test.py  misclassifications-2018-06-10-56211ab.txt  record-websites.fish  rustfmt.toml  yEd-mappings.cnfx
alexa/: alexa-10k-to-100k.txt  alexa-10k-to-200k.txt  top10k.txt  top1k.txt  top200.txt
benches/: parse_chrome_json.rs
chrome/: Cargo.toml
chrome/src/: lib.rs
commoncrawldownloader/: Cargo.toml  NDSS16-WEBSITE-dataset.txt
commoncrawldownloader/src/: main.rs
countermeasures/: Cargo.toml  README.md  cert.pem  key.pem
countermeasures/src/: adaptive_padding.rs  constant_rate.rs  dns_tcp.rs  ensure_padding.rs  error.rs  lib.rs  main.rs  pass_through.rs  streams.rs  throttle.rs  utils.rs
countermeasures/tests/: trust-dns-bug-744.rs
dns-sequence/: Cargo.toml
dns-sequence/src/: jsonl.rs  lib.rs  main.rs  stats.rs
dnstap/: Cargo.toml  build.rs  build.rs.disable
dnstap/src/: lib.rs
dnstap/src/protos/: dnstap.rs  mod.rs
docker/: Dockerfile  build.sh
experiments/: generate_traffic.py
experiments/increasing-lengths-json-get-http1.1/: capture.pcapng  dohdns  tlskeys
experiments/increasing-lengths-json-get-http2/: capture.pcap  capture.pcapng  dohdns  pdu-l4.pcap  pdu-l4.pcapng  pdu-l7.pcapng  tlskeys
experiments/increasing-lengths-udpwire-post-http1.1/: capture.pcapng  dohdns  tlskeys
experiments/padding-existance/: tlskeys  (+3 more)
extract-sequence/: Cargo.toml
extract-sequence/src/: lib.rs  main.rs
extract-sequence/tests/: parse-pcap.rs
extract-sequence/tests/data/: CF-constant-rate-400ms-2packets-with-fragment.pcap  CF-constant-rate-400ms-2packets.pcap  tlskeys
framestream/: Cargo.toml  README.md
framestream/src/: constants.rs  decoder.rs  encoder.rs  lib.rs  tests.rs
keras/: .gitignore  keras-test.py  simple-ml.py  utils.py
minmax/: Cargo.toml
notebooks/: .gitignore  Classification results for different k's.py  Classification results long term.py  Clustering-DNS-Sequences.py  Confusion Matrix.py  Countermeasures Analysis.py  Countermeasures Overhead Plot.py  DNS Timing Gaps - Plot.py  DNS Timing Gaps.rs  Distance Cost Breakdown.py  Distance per Cluster.rs  Distances per Cluster Plot.py  Domain Classification Results (stacked bar chart).py  Effect of Resolver Cache on DNS Sequences.py  FPR vs #Domains.rs  Keras Hyperparameter Analysis.py  Long Term Distance Analysis.py  Open World Stats.py  PCAP-DNSTAP-Differences.py  Perfect Countermeasures.py  Sequence Entropy Plots (Paper).py  Sequence Entropy Plots.py  Sequence Entropy.rs  Simulate Coutermeasures.rs  Untitled.py  Variability of DNS-HTTP-Tor Traffic.py  common_functions.py  sequences-stats-cw.json.xz
plot/: Cargo.toml
plot-dnstap/: Cargo.toml  plot-multiple.fish
plot-dnstap/src/: main.rs  plot.py
pylib/: Cargo.toml  setup.py
pylib/pylib/: __init__.py
pylib/src/: knn.rs  lib.rs
python/: control-chrome.py  dns-timing-chart.py
research/: README.md  clients.md  feature-comparison.md  next-steps.md
results/: process.fish  stats-to-per-tld-pickle.py
scripts/: alexa-top1000-tlds.txt  alexa-top100k-eff-tlds.txt  alexa-top30k-eff-tlds.txt  before-experiment.fish  cache.dump  cleanup-vms.fish  cluster.py  control-chrome.py  create-cache-dump.fish  deploy.fish  dns-timing-chart.py  flush-unbound.fish  foreach-domain.fish  percentage_stacked_area_chart.py  prefetch-unbound.fish  process-experiments.fish  record-websites.fish  sanitize-json-log.fish  sort-and-postprocess.py  third-party-resources.py
sequences/: Cargo.toml
sequences/benches/: take_smallest.rs  u8_abs.rs
sequences/src/: bounded_buffer.rs  constants.rs  distance_cost_info.rs  dnstap.rs  knn.rs  lib.rs  load_sequence.rs  pcap.rs  precision_sequence.rs  sequence_element.rs  serialization.rs  utils.rs
sequences/src/pcap/: bounded_buffer.rs  mod.rs  tcp_buffer.rs
sequences/src/precision_sequence/: adaptive_padding.rs  mod.rs
sequences/src/sequence/: distance_cost_info.rs  knn.rs  mod.rs  sequence_element.rs
sequences/tests/: classification.rs  load_sequence.rs
sequences/tests/data/: 1password.com-0-0.pcap.xz  google.com-0-0.pcap  google.com-0-0.tlskeys.txt.xz  porno666.tv-6-0.dnstap.xz  sslkeylogfile.txt  vk.com-1217-242.pcap.xz  zju.edu.cn-8-0.pcap.xz  zuanke8.com-5-0.dnstap.xz
src/: chrome.rs  depgraph.rs  lib.rs  main.rs  sequences.rs
taskmanager/: Cargo.toml  commands.sql  config.toml  diesel.toml  schema.patch
taskmanager/docker/: Dockerfile  README.md  capture-dns.service  dnstap.service  stubby.yml  unbound.conf
taskmanager/docker-pi/: Dockerfile  README.md  unbound.conf
taskmanager/docker/rpms/: python2-unbound-1.7.1-1.fc28.x86_64.rpm  python2-unbound-1.7.1-2.fc28.x86_64.rpm  python2-unbound-debuginfo-1.7.1-1.fc28.x86_64.rpm  python2-unbound-debuginfo-1.7.1-2.fc28.x86_64.rpm  python3-unbound-1.7.1-1.fc28.x86_64.rpm  python3-unbound-1.7.1-2.fc28.x86_64.rpm  python3-unbound-debuginfo-1.7.1-1.fc28.x86_64.rpm  python3-unbound-debuginfo-1.7.1-2.fc28.x86_64.rpm  unbound-1.7.1-2.fc28.x86_64.rpm  unbound-debugsource-1.7.1-2.fc28.x86_64.rpm  unbound-devel-1.7.1-2.fc28.x86_64.rpm  unbound-libs-1.7.1-2.fc28.x86_64.rpm  unbound-libs-debuginfo-1.7.1-2.fc28.x86_64.rpm  unbound-munin-1.7.1-2.fc28.noarch.rpm
taskmanager/migrations/2018-07-16-085942_create_tasks/: down.sql  up.sql
taskmanager/migrations/2018-07-24-093153_indices/: down.sql  up.sql
taskmanager/migrations/2018-11-05-100555_task-groups/: down.sql  up.sql
taskmanager/migrations/2019-12-04-162956_full-uri/: down.sql  up.sql
taskmanager/src/: lib.rs  main.rs  models.rs  schema.rs  utils.rs
third-party-resources/: Cargo.toml  README.md
third-party-resources/src/: main.rs
traffic-logging/: .gitignore  README.md  control-chrome.py  graph-builder.py  reddit-website-log.json
xvfb/: Cargo.toml
(+3953 files in other folders)
