[package]
name = "encrypted-dns"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

[workspace]
members = [
    "chrome",
    "commoncrawldownloader",
    "countermeasures",
    "dns-sequence",
    "dnstap",
    "extract-sequence",
    "framestream",
    "plot-dnstap",
    "pylib",
    "sequences",
    "taskmanager",
    "third-party-resources",
    "xvfb",
]

[profile.dev]
opt-level = 1

# This applies to all dependencies, but not this crate or any workspace member
[profile.dev.package."*"]
debug = 1 # lines only
opt-level = 3

# Build scripts and their dependencies will be compiled with -Copt-level=3
# By default, build scripts use the same rules as the rest of the profile
[profile.dev.build-override]
debug = false
opt-level = 3

[profile.release]
debug = 1 # lines only
lto = true

[profile.bench]
debug = false
lto = true

[[bench]]
name = "parse_chrome_json"
harness = false

[dependencies]
chrome = { path = "./chrome" }
chrono = "0.4.10"
csv = "1.1.3"
dnstap = { path = "./dnstap" }
env_logger = "0.7.1"
failure = "0.1.6"
glob = "0.3.0"
log = "0.4.8"
min-max-heap = "1.3.0"
misc_utils = "2.5.1"
once_cell = "1.3.1"
petgraph = { version = "0.4.13", features = [ "serde-1" ] }
petgraph-graphml = "1.0.2"
rayon = "1.3.0"
sequences = { path = "./sequences" }
serde = { version = "1.0.104", features = [ "derive" ] }
serde_json = "1.0.46"
structopt = "0.3.9"
url = "2.1.1"

[dependencies.serde_with]
version = "1.4.0"
features = [ "chrono" ]

[dev-dependencies]
chrome = { path = "./chrome" }
criterion = "0.3.1"
failure = "0.1.6"
misc_utils = "2.5.1"
serde_json = "1.0.46"
