[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "encrypted-dns"
version = "0.1.0"

[workspace]
members = [
  "chrome",
  "commoncrawldownloader",
  "countermeasures",
  "dns-sequence",
  "dnstap",
  "extract-sequence",
  "framestream",
  "plot-dnstap",
  "pylib",
  "sequences",
  "taskmanager",
  "third-party-resources",
  "xvfb",
]

[profile.dev]
opt-level = 1

# This applies to all dependencies, but not this crate or any workspace member
[profile.dev.package."*"]
debug = 1 # lines only
opt-level = 3

# Build scripts and their dependencies will be compiled with -Copt-level=3
# By default, build scripts use the same rules as the rest of the profile
[profile.dev.build-override]
debug = false
opt-level = 3

[profile.release]
debug = 1 # lines only
lto = true

[profile.bench]
debug = false
lto = true

[[bench]]
harness = false
name = "parse_chrome_json"

[dependencies]
anyhow = "1.0.57"
chrome = {path = "./chrome"}
chrono = "0.4.19"
csv = "1.1.6"
dnstap = {path = "./dnstap"}
env_logger = "0.9.0"
glob = "0.3.0"
log = "0.4.17"
min-max-heap = "1.3.0"
misc_utils = "4.2.1"
once_cell = "1.10.0"
petgraph = {version = "0.6.0", features = ["serde-1"]}
petgraph-graphml = "3.0.0"
rayon = "1.5.2"
sequences = {path = "./sequences"}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_with = {version = "1.13.0", features = ["chrono"]}
structopt = "0.3.26"
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.57"
chrome = {path = "./chrome"}
criterion = "0.3.5"
misc_utils = "4.2.1"
serde_json = "1.0.79"
