[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "commoncrawldownloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
anyhow = "1.0.50"
env_logger = "0.9.0"
flate2 = "1.0.22"
log = "0.4.14"
misc_utils = "4.0.1"
reqwest = {version = "0.11.7", features = ["blocking"]}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.72"
structopt = "0.3.25"
url = "2.2.2"
