[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "commoncrawldownloader"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.18"
anyhow = "1.0.57"
env_logger = "0.9.0"
flate2 = "1.0.24"
log = "0.4.17"
misc_utils = "4.2.3"
reqwest = {version = "0.11.10", features = ["blocking"]}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.79"
structopt = "0.3.26"
url = "2.2.2"
