[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "tlsproxy"
version = "0.1.0"

[dependencies]
anyhow = "1.0.51"
byteorder = "1.4.3"
chrono = "0.4.19"
env_logger = "0.9.0"
futures = {version = "0.3.18", default-features = false, features = ["std"]}
log = "0.4.14"
once_cell = "1.8.0"
openssl = {version = "0.10.38", features = ["vendored"]}
openssl-probe = "0.1.4"
rand = "0.8.4"
sequences = {path = "../sequences"}
serde_json = "1.0.72"
structopt = "0.3.25"
thiserror = "1.0.30"
tokio = {version = "0.2.24", features = ["fs", "io-util", "stream", "tcp", "time"]}
tokio-openssl = "0.4.0"
trust-dns-proto = {version = "0.20.3", default-features = false}
