[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "tlsproxy"
version = "0.1.0"

[dependencies]
anyhow = "1.0.64"
byteorder = "1.4.3"
chrono = "0.4.20"
env_logger = "0.9.0"
futures = {version = "0.3.21", default-features = false, features = ["std"]}
log = "0.4.17"
once_cell = "1.10.0"
openssl = {version = "0.10.41", features = ["vendored"]}
openssl-probe = "0.1.5"
rand = "0.8.5"
sequences = {path = "../sequences"}
serde_json = "1.0.79"
structopt = "0.3.26"
thiserror = "1.0.34"
tokio = {version = "0.2.24", features = ["fs", "io-util", "stream", "tcp", "time"]}
tokio-openssl = "0.4.0"
trust-dns-proto = {version = "0.21.2", default-features = false}
