[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "dns-sequence"
version = "0.1.0"

[dependencies]
anyhow = "1.0.36"
csv = "1.1.5"
env_logger = "0.8.2"
log = "0.4.11"
misc_utils = "4.0.0"
once_cell = "1.5.2"
prettytable-rs = {version = "0.8.0", default-features = false}
sequences = {path = "../sequences/", features = ["read_pcap"]}
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
serde_with = "1.6.0"
string_cache = "0.8.1"
structopt = "0.3.21"
