[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "dns-sequence"
version = "0.1.0"

[dependencies]
anyhow = "1.0.42"
csv = "1.1.6"
env_logger = "0.8.3"
log = "0.4.14"
misc_utils = "4.0.1"
once_cell = "1.8.0"
prettytable-rs = {version = "0.8.0", default-features = false}
sequences = {path = "../sequences/", features = ["read_pcap"]}
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_with = "1.9.4"
string_cache = "0.8.1"
structopt = "0.3.22"
