[package]
name = "dnstap"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

[dependencies]
chrono = "0.4.11"
failure = "0.1.7"
framestream = { path = "../framestream" }
log = "0.4.8"
misc_utils = "2.5.1"
protobuf = "2.8.1"
trust-dns-proto = { git = "https://github.com/jonasbb/trust-dns", branch = "fix-empty-option-at-end-of-edns", default-features = false }

[build-dependencies]
glob = "0.3.0"
protobuf-codegen-pure = "2.10.2"
