[package]
name = "dnstap"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

[dependencies]
chrono = "0.4.15"
failure = "0.1.8"
framestream = { path = "../framestream" }
log = "0.4.11"
misc_utils = "2.5.2"
protobuf = "2.8.1"
trust-dns-proto = { version = "0.20.0-alpha.1", default-features = false }

[build-dependencies]
glob = "0.3.0"
protobuf-codegen-pure = "2.17.0"
