[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "dnstap"
version = "0.1.0"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
framestream = {path = "../framestream"}
log = "0.4.14"
misc_utils = "4.0.1"
protobuf = "2.8.1"
trust-dns-proto = {version = "0.20.1", default-features = false}

[build-dependencies]
glob = "0.3.0"
protobuf-codegen-pure = "2.22.0"
