[package]
name = "extract_sequence"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = [ "serde" ] }
colored = "1.7.0"
env_logger = "0.6.1"
failure = "0.1.5"
hashbrown = { version = "0.2.2", features = [ "serde" ] }
itertools = "0.8.0"
log = "0.4.6"
pcap = "0.7.0"
pnet = "0.22.0"
ron = "0.5.1"
rustls = "0.15.2"
sequences = { path = "../sequences" }
serde = { version = "1.0.90", features = [ "derive" ] }
structopt = "0.2.15"

[dev-dependencies]
pretty_assertions = "0.6.1"
