[package]
name = "extract_sequence"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

[dependencies]
env_logger = "0.6.1"
failure = "0.1.5"
misc_utils = "2.3.1"
sequences = { path = "../sequences", features = [ "read_pcap" ] }
structopt = "0.2.15"

[dev-dependencies]
pretty_assertions = "0.6.1"
