[package]
name = "extract_sequence"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

[dependencies]
env_logger = "0.7.0"
failure = "0.1.5"
misc_utils = "2.4.0"
sequences = { path = "../sequences", features = [ "read_pcap" ] }
structopt = "0.3.2"

[dev-dependencies]
pretty_assertions = "0.6.1"
