[package]
name = "framestream"
version = "0.1.2"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Frame Streams implementation in Rust"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-framestream"
repository = "https://github.com/jedisct1/rust-framestream"
edition = "2018"

[dependencies]
byteorder = "1.3.4"
failure = "0.1.6"
log = "0.4.8"
