[package]
authors = ["Frank Denis <github@pureftpd.org>"]
description = "Frame Streams implementation in Rust"
edition = "2018"
homepage = "https://github.com/jedisct1/rust-framestream"
license = "ISC"
name = "framestream"
repository = "https://github.com/jedisct1/rust-framestream"
version = "0.1.2"

[dependencies]
anyhow = "1.0.51"
byteorder = "1.4.3"
log = "0.4.14"
thiserror = "1.0.30"
