[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "plot-dnstap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
log = "0.4.14"
pyo3 = "0.13.2"
sequences = {path = "../sequences"}
serde_json = "1.0.63"
structopt = "0.3.21"
