[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "plot-dnstap"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
env_logger = "0.9.0"
log = "0.4.14"
pyo3 = "0.16.0"
sequences = {path = "../sequences"}
serde_json = "1.0.79"
structopt = "0.3.26"
