[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "pylib"
version = "0.3.0"

[lib]
crate-type = ["cdylib"]
name = "pylib"

[dependencies]
anyhow = "1.0.47"
encrypted-dns = {path = ".."}
misc_utils = "4.0.1"
pyo3 = "0.15.0"
sequences = {path = "../sequences", features = ["read_pcap"]}
serde_json = "1.0.70"
