[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "pylib"
version = "0.3.0"

[lib]
crate-type = ["cdylib"]
name = "pylib"

[dependencies]
anyhow = "1.0.64"
encrypted-dns = {path = ".."}
misc_utils = "4.2.3"
pyo3 = "0.16.4"
sequences = {path = "../sequences", features = ["read_pcap"]}
serde_json = "1.0.79"
