[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "sequences"
version = "0.1.0"

[features]
read_pcap = ["etherparse", "itertools", "pcap-parser", "rustls"]

[[bench]]
harness = false
name = "take_smallest"

[[bench]]
harness = false
name = "u8_abs"

[dependencies]
anyhow = "1.0.55"
chrono = "0.4.19"
dashmap = "5.1.0"
dnstap = {path = "../dnstap"}
etherparse = {version = "0.10.1", optional = true}
fnv = "1.0.7"
internment = {version = "0.6.0", features = ["serde"]}
itertools = {version = "0.10.3", optional = true}
log = "0.4.14"
misc_utils = "4.0.1"
num-traits = "0.2.14"
once_cell = "1.10.0"
ordered-float = {version = "2.10.0", features = ["serde"]}
pcap-parser = {version = "0.13.0", features = ["data"], optional = true}
rand = "0.8.5"
rand_xorshift = "0.3.0"
rayon = "1.5.1"
rustls = {version = "0.20.4", optional = true}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
serde_with = {version = "1.12.0", features = ["chrono"]}
string_cache = "0.8.3"

[dev-dependencies]
criterion = "0.3.5"
min-max-heap = "1.3.0"
pretty_assertions = "1.2.0"
