[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "sequences"
version = "0.1.0"

[features]
read_pcap = ["etherparse", "itertools", "pcap-parser", "rustls"]

[[bench]]
harness = false
name = "take_smallest"

[[bench]]
harness = false
name = "u8_abs"

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.20"
dashmap = "5.3.3"
dnstap = {path = "../dnstap"}
etherparse = {version = "0.10.1", optional = true}
fnv = "1.0.7"
internment = {version = "0.7.0", features = ["serde"]}
itertools = {version = "0.10.3", optional = true}
log = "0.4.17"
misc_utils = "4.2.3"
num-traits = "0.2.15"
once_cell = "1.10.0"
ordered-float = {version = "3.0.0", features = ["serde"]}
pcap-parser = {version = "0.14.0", features = ["data"], optional = true}
rand = "0.8.5"
rand_xorshift = "0.3.0"
rayon = "1.5.3"
rustls = {version = "0.20.4", optional = true}
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.79"
serde_with = {version = "1.13.0", features = ["chrono"]}
string_cache = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"
min-max-heap = "1.3.0"
pretty_assertions = "1.2.1"
