[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "taskmanager"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
chrome = {path = "../chrome"}
chrono = "0.4.19"
diesel = {version = "1.4.8", features = ["chrono", "postgres"]}
diesel-derive-enum = {version = "1.1.2", features = ["postgres"]}
diesel_migrations = "1.4.0"
encrypted-dns = {path = ".."}
env_logger = "0.9.0"
log = "0.4.16"
misc_utils = "4.2.1"
once_cell = "1.10.0"
# Needed for Postgres. https://github.com/emk/rust-musl-builder#making-diesel-work
openssl = {version = "0.10.40", features = ["vendored"]}
rayon = "1.5.2"
sequences = {path = "../sequences", features = ["read_pcap"]}
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
structopt = "0.3.26"
tempfile = "3.3.0"
toml = "0.5.9"
url = "2.2.2"
wait-timeout = "0.2.0"
