[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "third-party-resources"
version = "0.1.0"

[dependencies]
anyhow = "1.0.52"
csv = "1.1.6"
dnstap = {path = "../dnstap"}
env_logger = "0.9.0"
log = "0.4.14"
misc_utils = "4.0.1"
once_cell = "1.9.0"
rayon = "1.5.1"
serde = {version = "1.0.134", features = ["derive"]}
serde_json = "1.0.74"
structopt = "0.3.25"
