[package]
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"
name = "third-party-resources"
version = "0.1.0"

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
dnstap = {path = "../dnstap"}
env_logger = "0.9.0"
log = "0.4.17"
misc_utils = "4.2.3"
once_cell = "1.14.0"
rayon = "1.5.3"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.79"
structopt = "0.3.26"
